--- a/Python/vsphere_nfv_automation/config.yaml
+++ b/Python/vsphere_nfv_automation/config.yaml
@@ -1,42 +1,36 @@
 ---
 vcenter:
-  - server_1:
-      hostname: vcsa02.nfvlab.local
-      username: administrator@vsphere.local
-      password: VMware1!
-  - server_2:
-      hostname: vcsa02.nfvlab.local
-      username: administrator@vsphere.local
-      password: VMware1!
+  - hostname: vcsa02.nfvlab.local
+    username: administrator@vsphere.local
+    password: VMware1!
+  - hostname: vcsa01.nfvlab.local
+    username: administrator@vsphere.local
+    password: VMware1!
 nsx:
-  - server_1:
-      hostname: nsxmgr02.nfvlab.local
-      username: admin
-      password: VMware1!VMware1!
-  - server_2:
-      hostname: nsxmgr02.nfvlab.local
-      username: admin
-      password: VMware1!VMware1!
+  - hostname: nsxmgr02.nfvlab.local
+    username: admin
+    password: VMware1!VMware1!
+  # - hostname: nsxmgr02.nfvlab.local
+  #   username: admin
+  #   password: VMware1!VMware1!
 vio:
-  - server_1:
-      hostname: viomgr02.nfvlab.local
-      username: admin
-      password: VMware1!
+  - hostname: viomgr02.nfvlab.local
+    username: admin
+    password: VMware1!
 vrops:
-  - server_1:
-      hostname: 172.16.110.25
-      username: admin
-      password: VMware1!
+  - hostname: vrops02-a.nfvlab.local 
+    username: admin
+    password: VMware1!
+  - hostname: vrops02-b.nfvlab.local 
+    username: admin
+    password: VMware1!
 vrli:
-  - server_1:
-      hostname: 172.16.111.20
-      username: admin
-      password: VMware1!
-      provider: Local
+  - hostname: 172.16.111.20
+    username: admin
+    password: VMware1!
+    provider: Local
 vrni:
-  - server_1:
-      hostname: vrni02.nfvlab.local
-      username: admin@local
-      password: VMware1!
-      domain: LOCAL
-...
+  - hostname: vrni02.nfvlab.local
+    username: admin@local
+    password: VMware1!
+    domain: LOCAL
