--- a/Python/rf-tutorial/requirements.txt
+++ b/Python/rf-tutorial/requirements.txt
@@ -1,11 +1,22 @@
+appdirs==1.4.4
 bcrypt==3.2.0
+beautifulsoup4==4.9.3
+certifi==2020.12.5
 cffi==1.14.4
+chardet==4.0.0
 cryptography==3.3.1
+idna==2.10
+lxml==4.6.2
 paramiko==2.7.2
 pycparser==2.20
 PyNaCl==1.4.0
 PyYAML==5.3.1
+requests==2.25.1
 robotframework==3.2.2
 robotframework-sshlibrary==3.6.0
 scp==0.13.3
 six==1.15.0
+soupsieve==2.1
+tqdm==4.55.1
+urllib3==1.26.2
+webdrivermanager==0.9.0
