--- a/Python/gh-cleanup-envs/pyproject.toml
+++ b/Python/gh-cleanup-envs/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "gh_cleanup_envs"}]
 
 [tool.poetry.dependencies]
 python = "3.10.9"
+requests = "^2.28.1"
 
 
 [build-system]
