--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,15 @@
 	path = py/dump_tabelog
 	url = git@gist.github.com:db56c2d9038535d8c228a5874b058355.git
 	branch = main
+[submodule "sh/schedule_gitlab_backups"]
+	path = sh/schedule_gitlab_backups
+	url = git@gist.github.com:4cf2d5d959ec2aca26990033efe634c3.git
+	branch = main
+[submodule "sh/kubectl_installer.sh"]
+	path = sh/kubectl_installer.sh
+	url = git@gist.github.com:de045e80cadd7e2e43fbe6caf8b5ea61.git
+	branch = main
+[submodule "sh/docker_installer.sh"]
+	path = sh/docker_installer.sh
+	url = git@gist.github.com:dbc8252e7f88d71226990be4b252d712.git
+	branch = main
