--- a/.github/pr-labeler.yaml
+++ b/.github/pr-labeler.yaml
@@ -24,7 +24,7 @@ ci:
 
 docs:
 - changed-files:
-  - any-glob-to-any-file: ['**/*.md']
+  - any-glob-to-any-file: ['**/README.md']
 
 bug:
 - head-branch: ['^fix/', '^hotfix/']
