fix: removed optional fields

--- a/.github/ISSUE_TEMPLATE/Generic.yml
+++ b/.github/ISSUE_TEMPLATE/Generic.yml
@@ -1,9 +1,6 @@
 ---
 name: Generic Issue Template
-about: Describe this issue template's purpose here.
-title: ''
-labels: ''
-assignees: ''
+description: Describe this issue template's purpose here.
 body:
   - type: markdown
     attributes:
