--- a/.github/ISSUE_TEMPLATE/Generic.yml
+++ b/.github/ISSUE_TEMPLATE/Generic.yml
@@ -1,6 +1,9 @@
 ---
 name: Generic Issue Template
 description: Describe this issue template's purpose here.
+projects:
+  # added to "Personal Works" project
+  - "hwakabh/10"
 body:
   - type: markdown
     attributes:
@@ -39,7 +42,6 @@ body:
     attributes:
       label: AsIs
       description: Current status of code basis, or brief issue descriptions
-      value: ""
       render: markdown
     validations:
       required: true
@@ -48,7 +50,6 @@ body:
     attributes:
       label: Justifications
       description: Describe the reason why this issue should be resolved.
-      value: ""
       render: markdown
     validations:
       required: false
@@ -56,7 +57,6 @@ body:
     id: todo
     attributes:
       label: ToDo
-      value: ""
       render: markdown
     validations:
       required: true
