--- a/.github/ISSUE_TEMPLATE/Generic.yml
+++ b/.github/ISSUE_TEMPLATE/Generic.yml
@@ -5,14 +5,11 @@ projects:
   # added to "Personal Works" project
   - "hwakabh/10"
 body:
-  - type: markdown
-    attributes:
-      value: |
-        Please fill out the following fields to raise generic issues!
   - type: dropdown
     id: submodules
     attributes:
-      label: What submodules are you seeing the problem on?
+      label: Submodule(s)
+      description: What submodules are you seeing the problem on?
       multiple: true
       options:
         - gs/slackhooks-world-holidays
@@ -42,7 +39,6 @@ body:
     attributes:
       label: AsIs
       description: Current status of code basis, or brief issue descriptions
-      render: markdown
     validations:
       required: true
   - type: textarea
@@ -50,13 +46,11 @@ body:
     attributes:
       label: Justifications
       description: Describe the reason why this issue should be resolved.
-      render: markdown
     validations:
       required: false
   - type: textarea
     id: todo
     attributes:
       label: ToDo
-      render: markdown
     validations:
       required: true
